test/semantic/error/err_05_const_modify_shadow.pl0
program constShadow;
const x = 10;
procedure p();
  var x;
begin
  x := 20; { Valid: modifies local var x }
end;
begin
  x := 30; { Error: modifies global const x }
end